Make code run with gunicorn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["SithHades <l.knaack93@gmail.com>"]
 readme = "README.md"
-packages = [{include = "kvb_api"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -12,6 +11,7 @@ beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 flask = "^2.3.2"
 cachelib = "^0.10.2"
+parse = "^1.19.0"
 
 
 [build-system]
